Add retry to task info
